<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/addFragment"
        android:name="ie.wit.map.ui.donate.AddFragment"
        android:label="@string/action_donate"
        tools:layout="@layout/fragment_add_place" >
        <action
            android:id="@+id/action_donateFragment_to_reportFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="ie.wit.map.ui.report.ListFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_list_place" >
        <action
            android:id="@+id/action_reportFragment_to_donateFragment"
            app:destination="@id/addFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_donationDetailFragment"
            app:destination="@id/placeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.map.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/placeDetailFragment"
        android:name="ie.wit.map.ui.detail.PlaceDetailFragment"
        android:label="Donation Detail"
        tools:layout="@layout/fragment_place_detail" >
        <action
            android:id="@+id/action_donationDetailFragment_to_reportFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="donationid"
            app:argType="long" />
    </fragment>
</navigation>